Grok changes
************

0.11.1 (unreleased)
===================

Bug fixes
---------

* Use a configuration action for the registration of the static directory.

* Fix https://bugs.launchpad.net/grok/+bug/161948: grok.testing.grok()
  now also loads the ZPT template factories so that unit tests that
  need to configure views with ZPT templates continue to work.

* Changed a few remaining references to ``grok.grok`` and
  ``grok.grok_component`` to their correct equivalents in
  ``grok.testing``.

* ``grok.testing.grok_component()`` could not be used in a pure
  doctest. This needed a bugfix in Martian (since 0.9.2). Add a test
  that demonstrates this problem.

* Fix https://bugs.launchpad.net/grok/+bug/162437: grok.Form and its
  subclasses did not implement IBrowserView.

0.11 (2007-11-08)
=================

Feature changes
---------------

* Integrated skins and layers: ``grok.layer``, ``grok.IGrokLayer``,
  ``grok.Skin``.

* Grok now supports hooking in new template languages without much work.
  See also doc/minitutorials/template-languages.txt. See Restructuring below
  for more techinical info.

* Accessing a template macro via context/@@the_view/the_template is now
  deprecated for the standard ZPT story of using
  context/@@the_view/macro/the_template.

* There is now a grok.direct() directive that can be used on GlobalUtilities
  to mark that the class provides the utility interface directly and need
  no instantiation.

* Removed ``grok.define_permission`` in favor of the
  ``grok.Permission`` component base class. You should now subclass
  this base class to define permissions. See also
  doc/minitutorials/permissions.txt

* Added the ``grok.Role`` component base class to define roles.

* The admin UI now displays and offers deletion of broken objects.

* Removed support for defining model schemas using an inner class with
  the special name ``fields``. This was abandoned in favor the usual