@@ -20,7 +20,44 @@ Let's try calling another method::
   >>> view = getMultiAdapter((mammoth, request), name='another')
   >>> view()
   '{"another": "grok"}'
-  
+
+Although principally all methods of the JSON class are registered as views,
+methods with names that start with an underscore are not::
+
+  >>> view = getMultiAdapter((mammoth, request), name='_private')
+  Traceback (most recent call last):
+  ...
+  ComponentLookupError: ((<grok.tests.json.view_lookup.Mammoth object at ...>,
+  <zope.publisher.browser.TestRequest instance URL=http://127.0.0.1>),
+  <InterfaceClass zope.interface.Interface>, '_private')
+
+Even more important, special methods like __call__ are not registered as viewws
+too. This test is here to make sure a previous bug has been fixed::
+
+  >>> view = getMultiAdapter((mammoth, request), name='__call__')
+  Traceback (most recent call last):
+  ...
+  ComponentLookupError: ((<grok.tests.json.view_lookup.Mammoth object at ...>,
+  <zope.publisher.browser.TestRequest instance URL=http://127.0.0.1>),
+  <InterfaceClass zope.interface.Interface>, '__call__')
+
+For JSON views we also need to confirm some methods that are defined on the
+baseclass (BrowserPage) are not registered as views::
+
+  >>> view = getMultiAdapter((mammoth, request), name='browserDefault')
+  Traceback (most recent call last):
+  ...
+  ComponentLookupError: ((<grok.tests.json.view_lookup.Mammoth object at ...>,
+  <zope.publisher.browser.TestRequest instance URL=http://127.0.0.1>),
+  <InterfaceClass zope.interface.Interface>, 'browserDefault')
+
+  >>> view = getMultiAdapter((mammoth, request), name='publishTraverse')
+  Traceback (most recent call last):
+  ...
+  ComponentLookupError: ((<grok.tests.json.view_lookup.Mammoth object at ...>,
+  <zope.publisher.browser.TestRequest instance URL=http://127.0.0.1>),
+  <InterfaceClass zope.interface.Interface>, 'publishTraverse')
+
 """
 import grok
 
@@ -35,4 +72,9 @@ class MammothView(grok.JSON):
 
     def another(self):
         return { 'another': 'grok'}
-    
+
+class SecondMammothView(grok.JSON):
+    grok.context(Mammoth)
+
+    def _private(self):
+        return {'should': 'not be registered'}
